@@ -1,6 +1,9 @@
 Changelog
 ---------
 
+- Check that we have a non-trivial response-object before trying to
+  set the content type. [malthe]
+
 - Wrap ``sys.modules`` dictionary in an "opaque" dictionary class,
   such that the representation string does not list all loaded
   modules. [malthe]
